<resources>
    <string name="app_name">tnscpe</string>
    <string name="description_loco">Loco app</string>
    <string name="welcome_sentence">Welcome to Tracking and Notifying System for Collecting Parcels for Faculty Engineering, RMUTT</string>
    <string name="sign_in">เข้าสู่ระบบ</string>
    <string name="input_email">E-mail</string>
    <string name="input_password">Password</string>
    <string name="checkbox_rememberme">จดจำผู้ใช้งาน</string>
    <string name="text_forgetpassword">ลืมรหัสผ่าน</string>
    <string name="text_never_sign_up">ยังไม่มีบัญชีผู้ใช้งาน</string>
    <string name="text_have_account_sign_up">มีบัญชีผู้ใช้งานอยู่แล้ว</string>
    <string name="sign_up">ลงทะเบียน</string>
    <string name="sign_up_name">ชื่อ</string>
    <string name="sign_up_sername">นามสกุล</string>
    <string name="sign_up_department">ภาควิชา</string>
    <string name="sign_up_password">รหัสผ่าน</string>
    <string name="sign_up_verify_password">ยืนยันรหัสผ่าน</string>
    <string name="sign_up_email">อีเมลล์</string>
    <string name="sign_in_or">หรือ</string>
    <string name="sign_in_google">เข้าสู่ระบบด้วย Google</string>
    <string name="alert_dialog_description">ยืนยันการรับพัสดุ</string>
    <string name="track_number">หมายเลขติดตามพัสดุ</string>
    <string name="track_number_2">หมายเลขติดตามพัสดุ :</string>
    <string name="edit_profile">แก้ไขข้อมูลผู้ใช้</string>
    <string name="edit_password">แก้ไขรหัสผ่าน</string>
    <string name="cancel">ยกเลิก</string>
    <string name="save">บันทึก</string>
    <string name="confirm">ยืนยัน</string>
    <string name="re_authen">กรุณากรอกรหัสผ่านปัจจุบัน</string>
    <string name="update_password">กรุณากรอกรหัสผ่านใหม่</string>
    <string name="new_password">รหัสผ่านใหม่</string>
    <string name="owner">เจ้าของพัสดุ</string>
    <string name="owner_2">เจ้าของพัสดุ :</string>
    <string name="receiver">ผู้รับพัสดุ</string>
    <string name="receiver_2">ผู้รับพัสดุ :</string>
    <string name="check_in_date">วันที่เจ้าหน้าที่รับพัสดุ</string>
    <string name="check_in_date_2">วันที่จ้าหน้าที่รับพัสดุ :</string>
    <string name="edit">แก้ไข</string>
    <string name="select_receiver">กำหนดผู้รับพัสดุ</string>
    <string name="text_receiver">รับแทน</string>
    <string name="add_list_parcel">เพิ่มรายการพัสดุ</string>
    <string name="add_parcels">เพิ่มพัสดุ</string>
    <string name="send_notification">ส่งการแจ้งเตือน</string>
    <string name="receive_more_parcels">รับพัสดุเพิ่ม</string>
    <string name="add_image_parcel">เพิ่มรูปภาพ</string>
    <string name="delete_track_number">ลบหมายเลขติดตามพัสดุ</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="check_out">วันที่รับพัสดุ</string>
    <string name="check_out_2">วันที่รับพัสดุ :</string>
    <string name="check_out_parecel">รับพัสดุ</string>
    <string name="delete_list_parcel">ลบรายการพัสดุ</string>
    <string name="edit_list_parcel">แก้ไขรายการพัสดุ</string>
    <string name="total_parcels_static">ยอดรวมการสั่งพัสดุ</string>
    <string name="parcel_count">กล่อง</string>
    <string name="in_year">ในปี</string>
    <string name="statistics">สถิติ</string>
    <string name="minimize">น้อยสุด</string>
    <string name="maximize">มากสุด</string>
    <string name="in_mount">ในเดือน</string>
    <string name="static_parcel_in_year">สถิติการรับพัสดุในปี</string>
    <string name="average_parcel">ค่าเฉลี่ย</string>
    <string name="box_per_year">กล่อง/ปี</string>
    <string name="user_add_parcel">เพิ่มรายการพัสดุของคุณ</string>
    <string name="time_to_check_in">เวลาที่เจ้าหน้าที่รับพัสดุ</string>
    <string name="time_to_check_in_2">เวลาที่เจ้าหน้าที่รับพัสดุ :</string>
    <string name="receiver_password">กรุณากรอกรหัสผ่านผู้รับพัสดุ</string>
    <string name="search_parcel">ค้นหาข้อมูลพัสดุ</string>
    <string name="sign_out">ออกจากระบบ</string>
    <string name="add_receiver">เพิ่มผู้รับ</string>
    <string name="notification">การแจ้งเตือน</string>
    <string name="accept">ยอมรับ</string>
    <string name="refuse">ปฏิเสธ</string>
    <string name="email_and_password_receiver">กรุณากรอกอีเมลและรหัสผ่านผู้รับพัสดุ</string>
    <string name="random_key">รหัสผ่านสำหรับการลงทะเบียนและแก้ไขข้อมูลผู้ใช้งาน</string>
    <string name="key_for_sign_up">กรุณากรอกรหัสผ่านจากเจ้าหน้าที่ เพื่อทำการลงทะเบียน</string>
    <string name="key_for_edit_profile">กรุณากรอกรหัสผ่านจากเจ้าหน้าที่ เพื่อทำการแก้ไขข้อมูลผู้ใช้</string>
</resources>